--- a/index.html
+++ b/index.html
@@ -201,18 +201,6 @@
                 width: 100%;
             }
         }
-
-        /* Compact Images */
-        .compact-images {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 10px;
-        }
-
-        .compact-images img {
-            width: 100%;
-            border-radius: 10px;
-        }
     </style>
 </head>
 
@@ -263,90 +251,89 @@
 
             <!-- Single Room with Double Cot -->
             <div class="room">
-                <div class="compact-images">
-                    <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_7.jpg" alt="Single Room with Double Cot" loading="lazy">
-                    <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_8.jpg" alt="View from Single Room with Double Cot" loading="lazy">
-                </div>
+                <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_5.jpg" alt="Single Room with Double Cot" loading="lazy">
                 <div class="room-details">
                     <h3>Single Room with Double Cot</h3>
-                    <p>This cozy room is perfect for 1 to 2 guests, offering a peaceful retreat with a balcony overlooking the mountains. Simple yet comfortable, it provides all essential amenities for a pleasant stay.</p>
+                    <p>Perfect for solo travelers or couples, this cozy room offers a peaceful environment with a mountain-view balcony.</p>
                     <ul>
                         <li>Capacity: 1-2 members</li>
                         <li>Non-air-conditioned room with a double cot</li>
-                        <li>Balcony with a mountain view</li>
-                        <li>Attached bathroom with Indian toilet and heating rod</li>
+                        <li>Balcony with mountain view</li>
+                        <li>Attached bathroom with Indian toilet</li>
+                        <li>Heating rod available for water heating</li>
                     </ul>
                     <a href="https://www.booking.com/hotel/in/nithilagam-homestays.en-gb.html" class="button">View Details</a>
                 </div>
             </div>
         </section>
 
+        <section class="contact">
+            <h2 class="text-center">Contact Us</h2>
+            <p class="text-center">For reservations or inquiries, feel free to reach out.</p>
+
+            <div class="map-container">
+                <iframe src="https://maps.google.com/maps?q=63MC%2BQW%20Tiruvannamalai%2C%20Tamil%20Nadu&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            </div>
+        </section>
+
+        <!-- House Rules Section -->
         <section class="rules">
             <h2>House Rules</h2>
             <table>
-                <caption>House Rules</caption>
-                <thead>
-                    <tr>
-                        <th>Rule</th>
-                        <th>Details</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>No parking</td>
-                        <td>Street parking only</td>
-                    </tr>
-                    <tr>
-                        <td>Mosquito proof</td>
-                        <td>Yes, property is equipped</td>
-                    </tr>
-                    <tr>
-                        <td>R.O. water</td>
-                        <td>5L provided per day</td>
-                    </tr>
-                    <tr>
-                        <td>Check-in</td>
-                        <td>From 14:00</td>
-                    </tr>
-                    <tr>
-                        <td>Check-out</td>
-                        <td>Until 11:00</td>
-                    </tr>
-                    <tr>
-                        <td>Cancellation/Prepayment</td>
-                        <td>Policies vary according to accommodation type</td>
-                    </tr>
-                    <tr>
-                        <td>Children and beds</td>
-                        <td>Children of any age are welcome, cots and extra beds available on request</td>
-                    </tr>
-                    <tr>
-                        <td>Age restriction</td>
-                        <td>No age requirement for check-in</td>
-                    </tr>
-                    <tr>
-                        <td>Pets</td>
-                        <td>Not allowed</td>
-                    </tr>
-                    <tr>
-                        <td>Smoking</td>
-                        <td>Not allowed</td>
-                    </tr>
-                    <tr>
-                        <td>Parties</td>
-                        <td>Not allowed</td>
-                    </tr>
-                    <tr>
-                        <td>Quiet hours</td>
-                        <td>Guests must be quiet between 23:00 and 07:00</td>
-                    </tr>
-                </tbody>
+                <caption>Stay Policies</caption>
+                <tr>
+                    <th>Policy</th>
+                    <th>Details</th>
+                </tr>
+                <tr>
+                    <td>No Parking</td>
+                    <td>Only street parking available</td>
+                </tr>
+                <tr>
+                    <td>Mosquito Proof</td>
+                    <td>Yes</td>
+                </tr>
+                <tr>
+                    <td>R.O. Water</td>
+                    <td>5L per day</td>
+                </tr>
+                <tr>
+                    <td>Check-in</td>
+                    <td>From 14:00</td>
+                </tr>
+                <tr>
+                    <td>Check-out</td>
+                    <td>Until 11:00</td>
+                </tr>
+                <tr>
+                    <td>Cancellation/Prepayment</td>
+                    <td>Policies vary according to accommodation type</td>
+                </tr>
+                <tr>
+                    <td>Children and Beds</td>
+                    <td>Children of any age are welcome. Cots and extra beds available on request</td>
+                </tr>
+                <tr>
+                    <td>Age Restriction</td>
+                    <td>No age requirement for check-in</td>
+                </tr>
+                <tr>
+                    <td>Pets</td>
+                    <td>Pets are not allowed</td>
+                </tr>
+                <tr>
+                    <td>Smoking</td>
+                    <td>Smoking is not allowed</td>
+                </tr>
+                <tr>
+                    <td>Parties</td>
+                    <td>Parties/events are not allowed</td>
+                </tr>
+                <tr>
+                    <td>Quiet Hours</td>
+                    <td>Guests must be quiet between 23:00 and 07:00</td>
+                </tr>
             </table>
-        </section>
-
-        <section class="map-container">
-            <h2>Find Us</h2>
-            <iframe src="https://www.google.com/maps?q=63MC+QW+Tiruvannamalai,+Tamil+Nadu&output=embed" frameborder="0" allowfullscreen></iframe>
         </section>
     </div>
 </body>
