--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <div class="hero" style="background-image: url('https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_1.jpg');">
                 <h1>Nithilagam Homestays</h1>
                 <p>Indulge in the serenity and refined comfort of Nithilagam Homestays, a haven of tranquility nestled amidst the breathtaking landscapes of India. Our exclusive retreat offers discerning travelers an unforgettable escape, where personalized service and exquisite accommodations create an experience of unparalleled luxury.</p>
-                <a class="button" href="https://www.booking.com/hotel/in/nithilagam-homestays.en-gb.html">Explore Our Sanctuary</a>
+                <a class="button" href="https://www.airbnb.co.in/rooms/1183996857070601185?locale=en&_set_bev_on_new_domain=1729102076_EAMTMwZTE2MmVjMW&source_impression_id=p3_1729102114_P3C9B2oW1tT9l3I_">Explore Our Sanctuary</a>
             </div>
         </header>
 
@@ -245,7 +245,7 @@
                         <li>Air-conditioned bedroom with a king bed</li>
                         <li>Bathroom with Western toilet and geyser, plus an additional Indian toilet</li>
                     </ul>
-                    <a href="https://www.booking.com/hotel/in/nithilagam-homestays.en-gb.html" class="button">View Details</a>
+                    <a href="https://www.airbnb.co.in/rooms/1183996857070601185?locale=en&_set_bev_on_new_domain=1729102076_EAMTMwZTE2MmVjMW&source_impression_id=p3_1729102114_P3C9B2oW1tT9l3I_" class="button">View Details</a>
                 </div>
             </div>
 
@@ -254,86 +254,27 @@
                 <img src="https://raw.githubusercontent.com/varunleaf/Nithilagam.github.io/main/public/images/image_5.jpg" alt="Single Room with Double Cot" loading="lazy">
                 <div class="room-details">
                     <h3>Single Room with Double Cot</h3>
-                    <p>Perfect for solo travelers or couples, this cozy room offers a peaceful environment with a mountain-view balcony.</p>
+                    <p>Perfect for solo travelers or couples, this cozy room offers a relaxing stay with a balcony providing stunning mountain views.</p>
                     <ul>
                         <li>Capacity: 1-2 members</li>
-                        <li>Non-air-conditioned room with a double cot</li>
-                        <li>Balcony with mountain view</li>
-                        <li>Attached bathroom with Indian toilet</li>
-                        <li>Heating rod available for water heating</li>
+                        <li>Non-air-conditioned, with a balcony and mountain view</li>
+                        <li>Attached bathroom with Indian toilet and heating rod</li>
                     </ul>
-                    <a href="https://www.booking.com/hotel/in/nithilagam-homestays.en-gb.html" class="button">View Details</a>
+                    <a href="https://www.airbnb.co.in/rooms/1183996857070601185?locale=en&_set_bev_on_new_domain=1729102076_EAMTMwZTE2MmVjMW&source_impression_id=p3_1729102114_P3C9B2oW1tT9l3I_" class="button">View Details</a>
                 </div>
             </div>
         </section>
 
         <section class="contact">
-            <h2 class="text-center">Contact Us</h2>
-            <p class="text-center">For reservations or inquiries, feel free to reach out.</p>
+            <h2>Contact Us</h2>
+            <p>For reservations and inquiries, feel free to reach out to us:</p>
+            <p><strong>Phone:</strong> +91 8838711410</p>
+            <p><strong>Email:</strong> nithilagam@gmail.com</p>
 
+            <!-- Embedded Google Map -->
             <div class="map-container">
-                <iframe src="https://maps.google.com/maps?q=63MC%2BQW%20Tiruvannamalai%2C%20Tamil%20Nadu&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <iframe src="https://maps.google.com/maps?q=63MC+QW%20Tiruvannamalai&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" allowfullscreen></iframe>
             </div>
-        </section>
-
-        <!-- House Rules Section -->
-        <section class="rules">
-            <h2>House Rules</h2>
-            <table>
-                <caption>Stay Policies</caption>
-                <tr>
-                    <th>Policy</th>
-                    <th>Details</th>
-                </tr>
-                <tr>
-                    <td>No Parking</td>
-                    <td>Only street parking available</td>
-                </tr>
-                <tr>
-                    <td>Mosquito Proof</td>
-                    <td>Yes</td>
-                </tr>
-                <tr>
-                    <td>R.O. Water</td>
-                    <td>5L per day</td>
-                </tr>
-                <tr>
-                    <td>Check-in</td>
-                    <td>From 14:00</td>
-                </tr>
-                <tr>
-                    <td>Check-out</td>
-                    <td>Until 11:00</td>
-                </tr>
-                <tr>
-                    <td>Cancellation/Prepayment</td>
-                    <td>Policies vary according to accommodation type</td>
-                </tr>
-                <tr>
-                    <td>Children and Beds</td>
-                    <td>Children of any age are welcome. Cots and extra beds available on request</td>
-                </tr>
-                <tr>
-                    <td>Age Restriction</td>
-                    <td>No age requirement for check-in</td>
-                </tr>
-                <tr>
-                    <td>Pets</td>
-                    <td>Pets are not allowed</td>
-                </tr>
-                <tr>
-                    <td>Smoking</td>
-                    <td>Smoking is not allowed</td>
-                </tr>
-                <tr>
-                    <td>Parties</td>
-                    <td>Parties/events are not allowed</td>
-                </tr>
-                <tr>
-                    <td>Quiet Hours</td>
-                    <td>Guests must be quiet between 23:00 and 07:00</td>
-                </tr>
-            </table>
         </section>
     </div>
 </body>
